<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailMovieActivity">

    <ScrollView
        android:id="@+id/scrollView_activity_detail_movie_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_activity_detail_movie_2">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/contraintLayout_activity_detail_movie_1_1_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_activity_detail_movie_1_1_1"
                android:layout_width="350dp"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/checkbox_off_background" />

            <TextView
                android:id="@+id/textView_activity_detail_movie_1_1_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tv_title_movie"
                android:textSize="10pt"
                app:layout_constraintEnd_toEndOf="@id/imageView_activity_detail_movie_1_1_1"
                app:layout_constraintStart_toStartOf="@id/imageView_activity_detail_movie_1_1_1"
                app:layout_constraintTop_toBottomOf="@id/imageView_activity_detail_movie_1_1_1" />

            <TextView
                android:id="@+id/textView_activity_detail_movie_1_1_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tv_popularity"
                android:textSize="9pt"
                app:layout_constraintEnd_toEndOf="@id/imageView_activity_detail_movie_1_1_1"
                app:layout_constraintStart_toStartOf="@id/imageView_activity_detail_movie_1_1_1"
                app:layout_constraintTop_toBottomOf="@id/textView_activity_detail_movie_1_1_2" />

            <TextView
                android:id="@+id/textView_activity_detail_movie_1_1_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tv_overview"
                android:textSize="9pt"
                app:layout_constraintEnd_toEndOf="@id/imageView_activity_detail_movie_1_1_1"
                app:layout_constraintStart_toStartOf="@id/imageView_activity_detail_movie_1_1_1"
                app:layout_constraintTop_toBottomOf="@id/textView_activity_detail_movie_1_1_3" />

            <TextView
                android:id="@+id/textView_activity_detail_movie_1_1_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tv_release_date"
                android:textSize="9pt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/imageView_activity_detail_movie_1_1_1"
                app:layout_constraintStart_toStartOf="@id/imageView_activity_detail_movie_1_1_1"
                app:layout_constraintTop_toBottomOf="@id/textView_activity_detail_movie_1_1_4" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/button_activity_detail_movie_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_kembali"
        android:textColor="@color/colorIconsWhite"
        android:textSize="9pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>