<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contraintLayout_main_item_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_main_item_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/contraintLayout_main_item_3_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">


            <ImageView
                android:id="@+id/imageView_main_item_3_1"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textView_main_item_3_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?android:attr/actionModePasteDrawable" />

            <TextView
                android:id="@+id/textView_main_item_3_2"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/tv_title_movie"
                android:textSize="9pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView_main_item_3_1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_main_item_3_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tv_popularity"
                android:textSize="7pt"
                app:layout_constraintEnd_toEndOf="@id/textView_main_item_3_2"
                app:layout_constraintStart_toStartOf="@id/textView_main_item_3_2"
                app:layout_constraintTop_toBottomOf="@id/textView_main_item_3_2" />

            <TextView
                android:id="@+id/textView_main_item_3_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tv_release_date"
                android:textSize="7pt"
                app:layout_constraintEnd_toEndOf="@id/textView_main_item_3_2"
                app:layout_constraintStart_toStartOf="@id/textView_main_item_3_2"
                app:layout_constraintTop_toBottomOf="@id/textView_main_item_3_3" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>